01-terraform-ec2/network/main.tf
resource "aws_vpc" "main" {
    cidr_block              = "10.0.0.0/16"
    enable_dns_hostnames    = true
    enable_dns_support      = true

    tags = { Name = "gl-pj001" }
}

resource "aws_subnet" "public" {
    count                   = 2
    vpc_id                  = aws_vpc.main.id
    cidr_block              = "10.0.${count.index}.0/24"
    availability_zone       = element(["ap-southeast-1a", "ap-southeast-1b"], count.index)
    map_public_ip_on_launch = true

    tags = { Name = "Main" }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
}

resource "aws_route_table" "public" {
    vpc_id  = aws_vpc.main.id
    route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
    }
    tags    = { Name = "public-rt" }
}

resource "aws_route_table_association" "name" {
    count = 2
    subnet_id = aws_subnet.public[count.index].id  
    route_table_id = aws_route_table.public.id
}
